--- a/ios/CheflyAiFinalv1/Info.plist
+++ b/ios/CheflyAiFinalv1/Info.plist
@@ -2,16 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<!-- camera access -->
-	<key>NSCameraUsageDescription</key>
-	<string>Your custom message to the user explaining why you need to use the camera</string>
-	<!-- microphone and camera access -->
-	<key>NSCameraUsageDescription</key>
-	<string>Need camera access to take pictures</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Need microphone access for video recording</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Need photo library access to save pictures there</string>
+	<!-- Required with iOS 10 and higher -->
+<key>NSCameraUsageDescription</key>
+<string>Your message to user when the camera is accessed for the first time</string>
+
+<!-- Required with iOS 11 and higher: include this only if you are planning to use the camera roll -->
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>Your message to user when the photo library is accessed for the first time</string>
+
+<!-- Include this only if you are planning to use the camera roll -->
+<key>NSPhotoLibraryUsageDescription</key>
+<string>Your message to user when the photo library is accessed for the first time</string>
+
+<!-- Include this only if you are planning to use the microphone for video recording -->
+<key>NSMicrophoneUsageDescription</key>
+<string>Your message to user when the microphone is accessed for the first time</string>
 
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
